syntax = "proto3";

package protogen;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login.proto";

option go_package = "e-wallet-app/protogen";

service EWalletApp {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/create_user"
      body: "*"
    };
  }
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/login_user"
      body: "*"
    };
  }
}